<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    
     <RadioGroup
            android:id="@+id/main_radio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/maintab_toolbar_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_button0"
                style="@style/main_tab_bottom"
                android:layout_marginTop="2.0dip"
                android:drawableTop="@drawable/icon_1_n"
                android:text="@string/main_home" />

            <RadioButton
                android:id="@+id/radio_button1"
                style="@style/main_tab_bottom"
                android:layout_marginTop="2.0dip"
                android:drawableTop="@drawable/icon_2_n"
                android:text="@string/main_news" />

            <RadioButton
                android:id="@+id/radio_button2"
                style="@style/main_tab_bottom"
                android:layout_marginTop="2.0dip"
                android:drawableTop="@drawable/icon_3_n"
                android:text="@string/main_manage_date" />

            <RadioButton
                android:id="@+id/radio_button3"
                style="@style/main_tab_bottom"
                android:layout_marginTop="2.0dip"
                android:drawableTop="@drawable/icon_4_n"
                android:text="@string/main_friends" />

            <RadioButton
                android:id="@+id/radio_button4"
                style="@style/main_tab_bottom"
                android:layout_marginTop="2.0dip"
                android:drawableTop="@drawable/icon_5_n"
                android:text="@string/more" />
        </RadioGroup>
    
    
    
    

</LinearLayout>
