<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/app_donate"
        android:title="@string/title_home"
        app:showAsAction="ifRoom"
        android:enabled="true"/>

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard"
        app:showAsAction="ifRoom"
        android:enabled="true"/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications"
        app:showAsAction="ifRoom"
        android:enabled="true"/>

    <item
        android:id="@+id/navigation_notifications1"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications"
        app:showAsAction="ifRoom"
        android:enabled="true"/>

</menu>
